--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </span>
     </h1>
     
-    <h4>IT Manager / Web Developer / System Administrator / Graphic Designer / Computer Operator</h4>
+    <h4>IT Manager / UI UX Designer / Web Developer / System Administrator / Graphic Designer / Computer Operator</h4>
   </div>
 
   <div class="container">
