--- a/My Projects.html
+++ b/My Projects.html
@@ -97,7 +97,7 @@
         <div class="project-body project-body-3d">
           <h5 class="project-title project-title-3d">Brand Identity Design</h5>
           <p class="project-text project-text-3d">Complete brand identity package including logo, business cards, and stationery for a local business.</p>
-          <a href="#" class="btn project-btn project-btn-3d">View Project</a>
+          <a href="./graphicpr.html" class="btn project-btn project-btn-3d">View Project</a>
         </div>
       </div>
 
