Google engine update 2.0.7

--- a/My Projects.html
+++ b/My Projects.html
@@ -4,16 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Projects - Inas Imthiyas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
-  
-   <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
-<link rel="manifest" href="./Files/site.webmanifest">
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Favicon & Web Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
+  <link rel="manifest" href="./Files/site.webmanifest">
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="Discover the creative projects of Inas Imthiyas — showcasing graphic design, digital art, branding, social media visuals, and innovative design solutions." />
+  <meta name="keywords" content="Inas Imthiyas, graphic design projects, digital art, branding, visual storytelling, social media graphics, portfolio, design showcase, Sri Lanka" />
+  <meta name="author" content="Inas Imthiyas" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="Graphic Design Projects - Inas Imthiyas" />
+  <meta property="og:description" content="Explore the creative graphic design projects of Inas Imthiyas — digital art, branding, social media visuals, and portfolio showcase." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://inasimtiyas.github.io/Web-Resume/My%20Projects.html" />
+  <meta property="og:image" content="https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp" />
+
+  <!-- ✅ Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Inas Imthiyas",
+    "url": "https://inasimtiyas.github.io/Web-Resume/",
+    "image": "https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp",
+    "jobTitle": "Cybersecurity Specialist | IT Manager | Full-Stack Developer | Graphic Designer",
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Colombo School of Computing",
+        "sameAs": "https://ucsc.cmb.ac.lk/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Marstech Private Campus",
+        "sameAs": "https://marstech.lk/cyber-security/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Open University of Sri Lanka",
+        "sameAs": "https://ou.ac.lk/kandy-regional-centre/"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/inasimti",
+      "https://www.instagram.com/inas_imti",
+      "https://www.facebook.com/share/1Ec4FhveFs/"
+    ]
+  }
+  </script>
 </head>
+
 <body>
 
 <!-- Loading Animation -->
