--- a/education.html
+++ b/education.html
@@ -7,13 +7,66 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   
-   <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
-<link rel="manifest" href="./Files/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
+  <link rel="manifest" href="./Files/site.webmanifest">
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="Explore the educational journey of Inas Imthiyas — a dedicated cybersecurity student, IT professional, and creative designer pursuing a Bachelor of Information Technology and Cybersecurity." />
+  <meta name="keywords" content="Inas Imthiyas, education, Sri Lanka, BIT, Colombo University, cybersecurity, Marstech, graphic design diploma, O/L results, A/L results" />
+  <meta name="author" content="Inas Imthiyas" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="Education - Inas Imthiyas" />
+  <meta property="og:description" content="Academic background of Inas Imthiyas — Cybersecurity Specialist & IT Professional from Sri Lanka." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://inasimtiyas.github.io/Web-Resume/education.html" />
+  <meta property="og:image" content="https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp" />
+
+  <!-- ✅ Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Inas Imthiyas",
+    "url": "https://inasimtiyas.github.io/Web-Resume/",
+    "image": "https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp",
+    "jobTitle": "Cybersecurity Specialist | IT Manager | Full-Stack Developer",
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Colombo School of Computing",
+        "sameAs": "https://ucsc.cmb.ac.lk/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Marstech Private Campus",
+        "sameAs": "https://marstech.lk/cyber-security/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Open University of Sri Lanka",
+        "sameAs": "https://ou.ac.lk/kandy-regional-centre/"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/inasimti",
+      "https://www.instagram.com/inas_imti",
+      "https://www.facebook.com/share/1Ec4FhveFs/"
+    ]
+  }
+  </script>
+  
 </head>
 
 <body>
+<!-- (Everything below remains exactly the same — no design or class changes) -->
 
 <!-- Loading Animation -->
 <div class="loader-overlay" id="pageLoader" aria-live="polite" aria-label="Loading experience">
@@ -170,14 +223,14 @@
 
   <!-- Social Media Icons -->
   <div class="social-icons">
-    <a href="https://www.linkedin.com/in/inasimti?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+    <a href="https://www.linkedin.com/in/inasimti">
       <img src="./Files/linkedIn.webp" alt="LinkedIn" class="icon icon-3d">
     </a>
     <img src="./Files/git.jpg" alt="GitHub" class="icon icon-3d">
     <a href="https://www.facebook.com/share/1Ec4FhveFs/">
       <img src="./Files/facebook.webp" alt="Facebook" class="icon icon-3d">
     </a>
-    <a href="https://www.instagram.com/inas_imti?igsh=Y3J3MW9ueDBwdHFh">
+    <a href="https://www.instagram.com/inas_imti">
       <img src="./Files/Insta.png" alt="Instagram" class="icon icon-3d">
     </a>
     <a href="mailto:inasimti9@gmail.com">
@@ -185,6 +238,7 @@
     </a>
   </div>
 </div>
+
 
 <script>
   // Create 3D background elements
@@ -450,3 +504,6 @@
 
 </body>
 </html>
+
+
+
