--- a/experience.html
+++ b/experience.html
@@ -12,6 +12,72 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
 <link rel="manifest" href="./Files/site.webmanifest">
 </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Experience - Inas Imthiyas</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
+  <link rel="manifest" href="./Files/site.webmanifest">
+
+  <!-- ✅ SEO Meta Tags -->
+<meta name="description" content="Explore the professional experience of Inas Imthiyas — Cybersecurity Specialist, IT Manager, Full-Stack Developer, and Graphic Designer with a proven track record in Sri Lanka." />
+<meta name="keywords" content="Inas Imthiyas, professional experience, Cybersecurity Specialist, IT Manager, Full-Stack Developer, Graphic Designer, Sri Lanka, work history, career, projects, achievements" />
+<meta name="author" content="Inas Imthiyas" />
+<meta name="robots" content="index, follow" />
+
+<!-- ✅ Open Graph (Social Media Preview) -->
+<meta property="og:title" content="Experience - Inas Imthiyas" />
+<meta property="og:description" content="Professional experience of Inas Imthiyas — Cybersecurity Specialist, IT Manager, and IT Professional from Sri Lanka." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://inasimtiyas.github.io/Web-Resume/experience.html" />
+<meta property="og:image" content="https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp" />
+
+  <!-- ✅ Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Inas Imthiyas",
+    "url": "https://inasimtiyas.github.io/Web-Resume/",
+    "image": "https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp",
+    "jobTitle": "Cybersecurity Specialist | IT Manager | Full-Stack Developer",
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Colombo School of Computing",
+        "sameAs": "https://ucsc.cmb.ac.lk/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Marstech Private Campus",
+        "sameAs": "https://marstech.lk/cyber-security/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Open University of Sri Lanka",
+        "sameAs": "https://ou.ac.lk/kandy-regional-centre/"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/inasimti",
+      "https://www.instagram.com/inas_imti",
+      "https://www.facebook.com/share/1Ec4FhveFs/"
+    ]
+  }
+  </script>
+  
+</head>
+
 <body>
 
 <!-- Loading Animation -->
@@ -75,21 +141,6 @@
   <h1 class="page-title-3d">Work Experience</h1>
 
   <div class="experience-container">
-    <!-- Eclat Unites -->
-    <div class="experience-card experience-card-3d">
-      <h2 class="experience-title experience-title-3d">
-        Eclat Unites Sri Lanka (Social Service Organization)
-        <span class="role-badge-3d">Education Project Chairman</span>
-      </h2>
-      <p class="experience-period experience-period-3d">Current</p>
-      <div class="experience-details experience-details-3d">
-        <ul>
-          <li>Working as Education Project Chairman</li>
-          <li>Leading educational initiatives and community development programs</li>
-          <li>Coordinating volunteer activities and educational workshops</li>
-        </ul>
-      </div>
-    </div>
 
     <!-- Amas Private Limited -->
     <div class="experience-card experience-card-3d">
