--- a/skills.html
+++ b/skills.html
@@ -4,14 +4,71 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills - Inas Imthiyas</title>
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-  
- <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
-<link rel="manifest" href="./Files/site.webmanifest">
+
+  <!-- Favicon & Web Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
+  <link rel="manifest" href="./Files/site.webmanifest">
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="Showcasing the professional skills of Inas Imthiyas — Cybersecurity, Full-Stack Development, IT Management, Graphic Design, and technology expertise from Sri Lanka." />
+  <meta name="keywords" content="Inas Imthiyas, skills, cybersecurity, full-stack development, IT management, graphic design, programming, technology expertise, Sri Lanka" />
+  <meta name="author" content="Inas Imthiyas" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="Skills - Inas Imthiyas" />
+  <meta property="og:description" content="Explore the technical and creative skills of Inas Imthiyas — cybersecurity, IT management, full-stack development, and graphic design." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://inasimtiyas.github.io/Web-Resume/skills.html" />
+  <meta property="og:image" content="https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp" />
+
+  <!-- ✅ Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Inas Imthiyas",
+    "url": "https://inasimtiyas.github.io/Web-Resume/",
+    "image": "https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp",
+    "jobTitle": "Cybersecurity Specialist | IT Manager | Full-Stack Developer | Graphic Designer",
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Colombo School of Computing",
+        "sameAs": "https://ucsc.cmb.ac.lk/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Marstech Private Campus",
+        "sameAs": "https://marstech.lk/cyber-security/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Open University of Sri Lanka",
+        "sameAs": "https://ou.ac.lk/kandy-regional-centre/"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/inasimti",
+      "https://www.instagram.com/inas_imti",
+      "https://www.facebook.com/share/1Ec4FhveFs/"
+    ]
+  }
+  </script>
 </head>
+
 <body>
 
 <!-- Loading Animation -->
