--- a/graphicpr.html
+++ b/graphicpr.html
@@ -7,6 +7,63 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+ 
+  <link rel="apple-touch-icon" sizes="180x180" href="./Files/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Files/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Files/favicon-16x16.png">
+  <link rel="manifest" href="./Files/site.webmanifest">
+
+ <!-- ✅ SEO Meta Tags -->
+<meta name="description" content="Explore Inas Imthiyas' creative Graphic Design projects — showcasing digital and print designs, branding, social media graphics, logos, and marketing materials." />
+<meta name="keywords" content="Inas Imthiyas, Graphic Design, Creative Designer, Branding, Logos, Social Media Graphics, Digital Design, Print Design, Portfolio, Design Projects, Marketing Materials" />
+<meta name="author" content="Inas Imthiyas" />
+<meta name="robots" content="index, follow" />
+
+<!-- ✅ Open Graph (Social Media Preview) -->
+<meta property="og:title" content="Graphic Design Projects - Inas Imthiyas" />
+<meta property="og:description" content="Explore the creative graphic design projects of Inas Imthiyas — showcasing digital art, branding, social media designs, and visual storytelling." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://inasimtiyas.github.io/Web-Resume/My%20Projects.html" />
+<meta property="og:image" content="https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp" />
+
+  <!-- ✅ Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Inas Imthiyas",
+    "url": "https://inasimtiyas.github.io/Web-Resume/",
+    "image": "https://inasimtiyas.github.io/Web-Resume/Files/linkedIn.webp",
+    "jobTitle": "Cybersecurity Specialist | IT Manager | Full-Stack Developer",
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Colombo School of Computing",
+        "sameAs": "https://ucsc.cmb.ac.lk/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Marstech Private Campus",
+        "sameAs": "https://marstech.lk/cyber-security/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Open University of Sri Lanka",
+        "sameAs": "https://ou.ac.lk/kandy-regional-centre/"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/inasimti",
+      "https://www.instagram.com/inas_imti",
+      "https://www.facebook.com/share/1Ec4FhveFs/"
+    ]
+  }
+  </script>
+  
 
   <style>
     /* Compact 3D Image Grid for Smaller Images */
