--- a/My Projects.html
+++ b/My Projects.html
@@ -154,7 +154,7 @@
       <!-- Graphic Design Project 1 -->
       <div class="project-card project-card-3d" data-category="graphic">
         <span class="category-badge-3d">Graphic Design</span>
-        <img src="./Files/adnsign.jpg" class="project-img project-img-3d" alt="Graphic Design Project">
+        <img src="./gd/cover page.png" class="project-img project-img-3d" alt="Graphic Design Project">
         <div class="project-body project-body-3d">
           <h5 class="project-title project-title-3d">Brand Identity Design</h5>
           <p class="project-text project-text-3d">Complete brand identity package including logo, business cards, and stationery for a local business.</p>
@@ -166,7 +166,7 @@
       <!-- Web Development Project -->
       <div class="project-card project-card-3d" data-category="web">
         <span class="category-badge-3d">Web Development</span>
-        <img src="./Files/adnsign.jpg" class="project-img project-img-3d" alt="Portfolio Website">
+        <img src="./gd/WEB DEV cover.png" class="project-img project-img-3d" alt="Portfolio Website">
         <div class="project-body project-body-3d">
           <h5 class="project-title project-title-3d">Portfolio Website</h5>
           <p class="project-text project-text-3d">Responsive personal portfolio website built with HTML, CSS, and JavaScript.</p>
