--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 </div>
 
 <nav>
-  <a href="index.html" class="active">Home</a>
-  <a href="education.html">Education</a>
+  <a href="index.html">Home</a>
+  <a href="education.html" class="active">Education</a>
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./My Gallery.html" onclick="accessGallery()">My Gallery 🔒</a>
+  <a href="./AI chatbox.html">AI ChatBOX</a>
 </nav>
 
 <div class="front front-3d">
