--- a/AI chatbox.html
+++ b/AI chatbox.html
@@ -444,7 +444,7 @@ const sendBtn = document.getElementById('send-btn');
 const closeBtn = document.getElementById('close-btn');
 
 // Replace this with your deployed serverless API URL
-const SERVER_URL = "https://your-server.vercel.app/chat";
+const SERVER_URL = "ai-server1-cyan.vercel.app";
 
 closeBtn.addEventListener('click', () => chatContainer.style.display='none');
 
