New Graphic Works Added and some Features added

--- a/My Projects.html
+++ b/My Projects.html
@@ -131,7 +131,7 @@
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a>
+ 
 </nav>
 
 <div class="container container-3d">
@@ -201,7 +201,18 @@
     <a href="mailto:inasimti9@gmail.com">
       <img src="./Files/Mail.webp" alt="Mail" class="icon icon-3d">
     </a>
+  </div> 
+</div></div>
+
+<div class="news-ticker">
+  <div class="ticker-content">
+    <span>👨‍💻 Cyber Security Student | </span>
+    <span>🔐 Passionate about Ethical Hacking & Network Security | </span>
+    <span>💻 Learning SOC, Penetration Testing & Blue Team | </span>
+    <span>🚀 Building Secure Digital Solutions | </span>
+    <span>📍 Portfolio by Inas Imthiyas</span>
   </div>
+</div>
 
 <script>
   // Create 3D background elements
