--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a>
+ 
 </nav>
 
 
@@ -211,6 +211,17 @@
 
   
 </div>
+
+<div class="news-ticker">
+  <div class="ticker-content">
+    <span>👨‍💻 Cyber Security Student | </span>
+    <span>🔐 Passionate about Ethical Hacking & Network Security | </span>
+    <span>💻 Learning SOC, Penetration Testing & Blue Team | </span>
+    <span>🚀 Building Secure Digital Solutions | </span>
+    <span>📍 Portfolio by Inas Imthiyas</span>
+  </div>
+</div>
+
 
 <script>
 const openChatBtn = document.getElementById('open-chat');
