--- a/education.html
+++ b/education.html
@@ -122,7 +122,7 @@
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a>
+  
 </nav>
 
 <div class="container container-3d">
@@ -168,6 +168,41 @@
       </div>
     </div>
 
+     <div class="education-card education-card-3d">
+      <div class="education-header education-header-3d">
+        <h2 class="education-title education-title-3d">
+          Diploma In Information Technology & English 
+          <span class="status-badge-3d">2022-2023</span>
+        </h2>
+        <a href="https://icbt.lk/icbt-kandy-campus/">
+          <img src="./Files/icbt.png" alt="ICBT" class="company-logo company-logo-3d">
+        </a>
+      </div>
+      <div class="education-details education-details-3d">
+        <ul>
+          <li>ICBT kandy  – Status: completed</li>
+          <li>Completed with Merit, gaining strong foundational skills in IT applications, computer fundamentals, and professional English communication for academic and workplace use.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Graphic Design -->
+    <div class="education-card education-card-3d">
+      <div class="education-header education-header-3d">
+        <h2 class="education-title education-title-3d">Diploma in Graphic Designing</h2>
+        <a href="https://ou.ac.lk/kandy-regional-centre/">
+          <img src="./Files/open university.webp" alt="Open University" class="company-logo company-logo-3d">
+        </a>
+      </div>
+      <div class="education-details education-details-3d">
+        <ul>
+          <li>Open University of Sri Lanka</li>
+          <li>A creative diploma focused on branding, design principles, Adobe Suite (Photoshop, Illustrator), typography, and visual storytelling. Equipped to create print and digital media professionally.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
     <!-- GCE -->
     <div class="education-card education-card-3d">
       <h2 class="education-title education-title-3d">General Certificate of Education (G.C.E.)</h2>
@@ -204,22 +239,7 @@
       </div>
     </div>
 
-    <!-- Graphic Design -->
-    <div class="education-card education-card-3d">
-      <div class="education-header education-header-3d">
-        <h2 class="education-title education-title-3d">Diploma in Graphic Designing</h2>
-        <a href="https://ou.ac.lk/kandy-regional-centre/">
-          <img src="./Files/open university.webp" alt="Open University" class="company-logo company-logo-3d">
-        </a>
-      </div>
-      <div class="education-details education-details-3d">
-        <ul>
-          <li>Open University of Sri Lanka</li>
-          <li>A creative diploma focused on branding, design principles, Adobe Suite (Photoshop, Illustrator), typography, and visual storytelling. Equipped to create print and digital media professionally.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
+    
 
   <!-- Social Media Icons -->
   <div class="social-icons">
@@ -239,6 +259,15 @@
   </div>
 </div>
 
+<div class="news-ticker">
+  <div class="ticker-content">
+    <span>👨‍💻 Cyber Security Student | </span>
+    <span>🔐 Passionate about Ethical Hacking & Network Security | </span>
+    <span>💻 Learning SOC, Penetration Testing & Blue Team | </span>
+    <span>🚀 Building Secure Digital Solutions | </span>
+    <span>📍 Portfolio by Inas Imthiyas</span>
+  </div>
+</div>
 
 <script>
   // Create 3D background elements
