--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <a href="skills.html">Skills</a>
   <a href="contact.html">Contact</a>
   <a href="My Projects.html">My Projects</a>
-  <a href="./AI chatbox.html" id="open-chat" >AI ChatBOX</a>
+  
 </nav>
 
 <div class="front front-3d">
@@ -120,6 +120,16 @@
   <a href="mailto:inasimti9@gmail.com">
     <img src="./Files/Mail.webp" alt="Mail" class="icon icon-3d">
   </a>
+</div>
+
+<div class="news-ticker">
+  <div class="ticker-content">
+    <span>👨‍💻 Cyber Security Student | </span>
+    <span>🔐 Passionate about Ethical Hacking & Network Security | </span>
+    <span>💻 Learning SOC, Penetration Testing & Blue Team | </span>
+    <span>🚀 Building Secure Digital Solutions | </span>
+    <span>📍 Portfolio by Inas Imthiyas</span>
+  </div>
 </div>
 
 <!-- Your Original JavaScript (unchanged) -->
