--- a/My Projects.html
+++ b/My Projects.html
@@ -210,7 +210,7 @@
     <span>🔐 Passionate about Ethical Hacking & Network Security | </span>
     <span>💻 Learning SOC, Penetration Testing & Blue Team | </span>
     <span>🚀 Building Secure Digital Solutions | </span>
-    <span>📍 Portfolio by Inas Imthiyas</span>
+    <span>📍 Portfolio by Inas Imthiyas..</span>
   </div>
 </div>
 
